# schematic

./: .gitignore  config.yaml  schematic.cabal  schematic.sublime-project
src/: Main.hs  Schemata.hs  Settings.hs
src/Data/: Schemata.hs
src/Data/FileStore/: GitSync.hs
src/Data/FileStore/Internal/: Types.hs
src/Style/: Common.hs
src/View/: IFrame.hs  Root.hs  Snippets.hs
static/: config.json
static/css/: bootstrap-theme.css  bootstrap-theme.min.css  bootstrap.css  bootstrap.min.css
static/js/: bootstrap.js  bootstrap.min.js  jsoneditor.js  root.js
static/json/: schema.json
