name:                schematic
version:             0.0.1
synopsis:            Schema-backed JSON editor
license:             BSD3
author:              Keynfawkes
maintainer:          encube.ul@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

executable schematic
    hs-source-dirs:      src
    main-is:             Main.hs
    default-language:    Haskell2010
    default-extensions:  OverloadedStrings
                       , ScopedTypeVariables
    build-depends:       base == 4.7.*
                       , wai
                       , warp
                       , http-types
                       , resourcet
                       , scotty
                       , text
                       , bytestring
                       , blaze-html
                       , blaze-markup
                       , clay
--                       , persistent ==1.3.*
--                       , persistent-template ==1.3.*
--                       , persistent-postgresql ==1.3.*
                       , monad-logger == 0.3.*
                       , transformers
                       , wai-middleware-static
                       , wai-extra
                       , time
                       , filestore
                       , yaml
                       , aeson
                       , filepath
                       , utf8-string
